@@ -1,5 +1,6 @@
 package me.ianhe.interceptor;
 
+import org.apache.commons.lang3.CharEncoding;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.web.servlet.HandlerInterceptor;
 import org.springframework.web.servlet.ModelAndView;
@@ -30,7 +31,7 @@ public class AdminAuthInterceptor implements HandlerInterceptor {
                 return true;
             }
             if (!StringUtils.isEmpty(queryStr)) {
-                from = from + "?" + URLEncoder.encode(queryStr, "UTF-8");
+                from = from + "?" + URLEncoder.encode(queryStr, CharEncoding.UTF_8);
             }
             if (from.endsWith("/login"))
                 from = "";
@@ -51,12 +52,12 @@ public class AdminAuthInterceptor implements HandlerInterceptor {
     @Override
     public void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler,
                            ModelAndView modelAndView) throws Exception {
-
+        // nothing to do.
     }
 
     @Override
     public void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex)
             throws Exception {
-
+        // nothing to do.
     }
 }
